--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,7 @@
 	<classpathentry kind="lib" path="lib/hibernate/jboss-logging-3.1.3.GA.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/jboss-logging-annotations-1.2.0.Beta1.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/postgreSQL/postgresql-9.4-1201.jdbc4.jar"/>
+	<classpathentry kind="lib" path="lib/jcalendar/jcalendar-1.3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
