--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/hibernate/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/postgreSQL/postgresql-9.4-1201.jdbc4.jar"/>
 	<classpathentry kind="lib" path="lib/jcalendar/jcalendar-1.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/jtattoo/JTattoo-1.6.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
